--- a/index.html
+++ b/index.html
@@ -27,9 +27,15 @@
             >Web<span class="logo-header">Studio</span></a
           >
           <ul class="menu-nav">
-            <li><a href="./index.html" class="list-header">Studio</a></li>
-            <li><a href="" class="list-header">Portfolio</a></li>
-            <li><a href="" class="list-header">Contacts</a></li>
+            <li class="nav-item">
+              <a href="./index.html" class="list-header current">Studio</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="list-header">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="list-header">Contacts</a>
+            </li>
           </ul>
         </nav>
         <address class="box-address">
@@ -51,6 +57,7 @@
     <main>
       <!-- секція 1 Studio -->
       <section id="Studio" class="studio">
+        <a href=""></a>
         <div class="container container-main-studio">
           <h1 class="h-one">Effective Solutions for Your Business</h1>
           <button type="button" class="button">Order Service</button>
@@ -63,6 +70,11 @@
           <h2 class="visually-hidden">Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
+              <div class="portfolio-icon-section">
+                <svg class="portfolio-icon">
+                  <use href="/images/icon.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="portfolio-h-three">Strategy</h3>
               <p class="portfolio-h-three-info">
                 Our goal is to identify the business problem to walk away with
@@ -70,6 +82,11 @@
               </p>
             </li>
             <li class="portfolio-item">
+              <div class="portfolio-icon-section">
+                <svg class="portfolio-icon">
+                  <use href="/images/icon.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="portfolio-h-three">Punctuality</h3>
               <p class="portfolio-h-three-info">
                 Bring the key message to the brand's audience for the best price
@@ -77,6 +94,11 @@
               </p>
             </li>
             <li class="portfolio-item">
+              <div class="portfolio-icon-section">
+                <svg class="portfolio-icon">
+                  <use href="/images/icon.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="portfolio-h-three">Diligence</h3>
               <p class="portfolio-h-three-info">
                 Research and confirm brands with the strongest digital growth
@@ -84,6 +106,11 @@
               </p>
             </li>
             <li class="portfolio-item">
+              <div class="portfolio-icon-section">
+                <svg class="portfolio-icon">
+                  <use href="/images/icon.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="portfolio-h-three">Technologies</h3>
               <p class="portfolio-h-three-info">
                 Design practice focused on digital experiences. We bring forth a
