add social icon

--- a/index.html
+++ b/index.html
@@ -135,6 +135,44 @@
               <div class="contacts-container-info">
                 <h3 class="contacts-h-three-team">Mark Guerrero</h3>
                 <p class="contacts-info">Product Designer</p>
+                <ul class="contacts-info-list">
+                  <li class="contacts-info-item">
+                    <a href="" class="contacts-info-link"
+                      ><div class="contacts-info-container">
+                        <svg class="contacts-icon">
+                          <use href="/images/icon.svg#icon-instagram"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+
+                  <li class="contacts-info-item">
+                    <a href="" class="contacts-info-link"
+                      ><div class="contacts-info-container">
+                        <svg class="contacts-icon">
+                          <use href="/images/icon.svg#icon-twitter"></use>
+                        </svg>
+                      </div>
+                    </a>
+                  </li>
+
+                  <li class="contacts-info-item">
+                    <a href="" class="contacts-info-link"
+                      ><div class="contacts-info-container">
+                        <svg class="contacts-icon">
+                          <use href="/images/icon.svg#icon-facebook"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+
+                  <li class="contacts-info-item">
+                    <a href="" class="contacts-info-link"
+                      ><div class="contacts-info-container">
+                        <svg class="contacts-icon">
+                          <use href="/images/icon.svg#icon-linkedin"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="contacts-item">
@@ -142,6 +180,43 @@
               <div class="contacts-container-info">
                 <h3 class="contacts-h-three-team">Tom Ford</h3>
                 <p class="contacts-info">Frontend Developer</p>
+                <ul class="contacts-info-list">
+                  <li class="contacts-info-item">
+                    <a href="" class="contacts-info-link"
+                      ><div class="contacts-info-container">
+                        <svg class="contacts-icon">
+                          <use href="/images/icon.svg#icon-instagram"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+
+                  <li class="contacts-info-item">
+                    <a href="" class="contacts-info-link"
+                      ><div class="contacts-info-container">
+                        <svg class="contacts-icon">
+                          <use href="/images/icon.svg#icon-twitter"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+
+                  <li class="contacts-info-item">
+                    <a href="" class="contacts-info-link"
+                      ><div class="contacts-info-container">
+                        <svg class="contacts-icon">
+                          <use href="/images/icon.svg#icon-facebook"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+
+                  <li class="contacts-info-item">
+                    <a href="" class="contacts-info-link"
+                      ><div class="contacts-info-container">
+                        <svg class="contacts-icon">
+                          <use href="/images/icon.svg#icon-linkedin"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="contacts-item">
@@ -153,6 +228,43 @@
               <div class="contacts-container-info">
                 <h3 class="contacts-h-three-team">Camila Garcia</h3>
                 <p class="contacts-info">Marketing</p>
+                <ul class="contacts-info-list">
+                  <li class="contacts-info-item">
+                    <a href="" class="contacts-info-link"
+                      ><div class="contacts-info-container">
+                        <svg class="contacts-icon">
+                          <use href="/images/icon.svg#icon-instagram"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+
+                  <li class="contacts-info-item">
+                    <a href="" class="contacts-info-link">
+                      <div class="contacts-info-container">
+                        <svg class="contacts-icon">
+                          <use href="/images/icon.svg#icon-twitter"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+
+                  <li class="contacts-info-item">
+                    <a href="" class="contacts-info-link"
+                      ><div class="contacts-info-container">
+                        <svg class="contacts-icon">
+                          <use href="/images/icon.svg#icon-facebook"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+
+                  <li class="contacts-info-item">
+                    <a href="" class="contacts-info-link"
+                      ><div class="contacts-info-container">
+                        <svg class="contacts-icon">
+                          <use href="/images/icon.svg#icon-linkedin"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="contacts-item">
@@ -164,6 +276,43 @@
               <div class="contacts-container-info">
                 <h3 class="contacts-h-three-team">Daniel Wilson</h3>
                 <p class="contacts-info">UI Designer</p>
+                <ul class="contacts-info-list">
+                  <li class="contacts-info-item">
+                    <a href="" class="contacts-info-link"
+                      ><div class="contacts-info-container">
+                        <svg class="contacts-icon">
+                          <use href="/images/icon.svg#icon-instagram"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+
+                  <li class="contacts-info-item">
+                    <a href="" class="contacts-info-link"
+                      ><div class="contacts-info-container">
+                        <svg class="contacts-icon">
+                          <use href="/images/icon.svg#icon-twitter"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+
+                  <li class="contacts-info-item">
+                    <a href="" class="contacts-info-link"
+                      ><div class="contacts-info-container">
+                        <svg class="contacts-icon">
+                          <use href="/images/icon.svg#icon-facebook"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+
+                  <li class="contacts-info-item">
+                    <a href="" class="contacts-info-link"
+                      ><div class="contacts-info-container">
+                        <svg class="contacts-icon">
+                          <use href="/images/icon.svg#icon-linkedin"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
