--- a/index.html
+++ b/index.html
@@ -337,13 +337,21 @@
                 <p class="port-info">App</p>
               </div>
             </li>
-            <li class="port-item">
+            <li class="port-item-hover">
               <img
                 src="./images/cashlesspayment.jpg"
                 alt="Cashless Payment"
                 width="360"
                 height="300"
+                loading="lazy"
               />
+              <div class="port-info-container-hover">
+                <p class="port-hover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="port-info-container">
                 <h3 class="h-three-port">Cashless Payment</h3>
                 <p class="port-info">Marketing</p>
