--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
               <a href="#" class="contacts-info-link">
                 <div class="contacts-info-container">
                   <svg class="contacts-icon">
-                    <use href="/images/iconsocial.svg#icon-instagram"></use>
+                    <use href="/images/icon.svg#icon-instagram"></use>
                   </svg>
                 </div>
               </a>
@@ -438,7 +438,7 @@
               <a href="#" class="contacts-info-link">
                 <div class="contacts-info-container">
                   <svg class="contacts-icon">
-                    <use href="/images/iconsocial.svg#icon-twitter"></use>
+                    <use href="/images/icon.svg#icon-twitter"></use>
                   </svg>
                 </div>
               </a>
@@ -448,7 +448,7 @@
               <a href="#" class="contacts-info-link">
                 <div class="contacts-info-container">
                   <svg class="contacts-icon">
-                    <use href="/images/iconsocial.svg#icon-facebook"></use>
+                    <use href="/images/icon.svg#icon-facebook"></use>
                   </svg>
                 </div>
               </a>
@@ -458,7 +458,7 @@
               <a href="#" class="contacts-info-link">
                 <div class="contacts-info-container">
                   <svg class="contacts-icon">
-                    <use href="/images/iconsocial.svg#icon-linkedin"></use>
+                    <use href="/images/icon.svg#icon-linkedin"></use>
                   </svg>
                 </div>
               </a>
