--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <li class="portfolio-item">
               <div class="portfolio-icon-section">
                 <svg class="portfolio-icon">
-                  <use href="/images/icon.svg#icon-antenna"></use>
+                  <use href="/images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="portfolio-h-three">Strategy</h3>
@@ -84,7 +84,7 @@
             <li class="portfolio-item">
               <div class="portfolio-icon-section">
                 <svg class="portfolio-icon">
-                  <use href="/images/icon.svg#icon-clock"></use>
+                  <use href="/images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="portfolio-h-three">Punctuality</h3>
@@ -96,7 +96,7 @@
             <li class="portfolio-item">
               <div class="portfolio-icon-section">
                 <svg class="portfolio-icon">
-                  <use href="/images/icon.svg#icon-diagram"></use>
+                  <use href="/images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="portfolio-h-three">Diligence</h3>
@@ -108,7 +108,7 @@
             <li class="portfolio-item">
               <div class="portfolio-icon-section">
                 <svg class="portfolio-icon">
-                  <use href="/images/icon.svg#icon-astronaut"></use>
+                  <use href="/images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="portfolio-h-three">Technologies</h3>
@@ -140,7 +140,7 @@
                     <a href="" class="contacts-info-link"
                       ><div class="contacts-info-container">
                         <svg class="contacts-icon">
-                          <use href="/images/icon.svg#icon-instagram"></use>
+                          <use href="/images/icons.svg#icon-instagram"></use>
                         </svg></div
                     ></a>
                   </li>
@@ -149,7 +149,7 @@
                     <a href="" class="contacts-info-link"
                       ><div class="contacts-info-container">
                         <svg class="contacts-icon">
-                          <use href="/images/icon.svg#icon-twitter"></use>
+                          <use href="/images/icons.svg#icon-twitter"></use>
                         </svg>
                       </div>
                     </a>
@@ -159,7 +159,7 @@
                     <a href="" class="contacts-info-link"
                       ><div class="contacts-info-container">
                         <svg class="contacts-icon">
-                          <use href="/images/icon.svg#icon-facebook"></use>
+                          <use href="/images/icons.svg#icon-facebook"></use>
                         </svg></div
                     ></a>
                   </li>
@@ -168,7 +168,7 @@
                     <a href="" class="contacts-info-link"
                       ><div class="contacts-info-container">
                         <svg class="contacts-icon">
-                          <use href="/images/icon.svg#icon-linkedin"></use>
+                          <use href="/images/icons.svg#icon-linkedin"></use>
                         </svg></div
                     ></a>
                   </li>
@@ -185,7 +185,7 @@
                     <a href="" class="contacts-info-link"
                       ><div class="contacts-info-container">
                         <svg class="contacts-icon">
-                          <use href="/images/icon.svg#icon-instagram"></use>
+                          <use href="/images/icons.svg#icon-instagram"></use>
                         </svg></div
                     ></a>
                   </li>
@@ -194,7 +194,7 @@
                     <a href="" class="contacts-info-link"
                       ><div class="contacts-info-container">
                         <svg class="contacts-icon">
-                          <use href="/images/icon.svg#icon-twitter"></use>
+                          <use href="/images/icons.svg#icon-twitter"></use>
                         </svg></div
                     ></a>
                   </li>
@@ -203,7 +203,7 @@
                     <a href="" class="contacts-info-link"
                       ><div class="contacts-info-container">
                         <svg class="contacts-icon">
-                          <use href="/images/icon.svg#icon-facebook"></use>
+                          <use href="/images/icons.svg#icon-facebook"></use>
                         </svg></div
                     ></a>
                   </li>
@@ -212,7 +212,7 @@
                     <a href="" class="contacts-info-link"
                       ><div class="contacts-info-container">
                         <svg class="contacts-icon">
-                          <use href="/images/icon.svg#icon-linkedin"></use>
+                          <use href="/images/icons.svg#icon-linkedin"></use>
                         </svg></div
                     ></a>
                   </li>
@@ -233,7 +233,7 @@
                     <a href="" class="contacts-info-link"
                       ><div class="contacts-info-container">
                         <svg class="contacts-icon">
-                          <use href="/images/icon.svg#icon-instagram"></use>
+                          <use href="/images/icons.svg#icon-instagram"></use>
                         </svg></div
                     ></a>
                   </li>
@@ -242,7 +242,7 @@
                     <a href="" class="contacts-info-link">
                       <div class="contacts-info-container">
                         <svg class="contacts-icon">
-                          <use href="/images/icon.svg#icon-twitter"></use>
+                          <use href="/images/icons.svg#icon-twitter"></use>
                         </svg></div
                     ></a>
                   </li>
@@ -251,7 +251,7 @@
                     <a href="" class="contacts-info-link"
                       ><div class="contacts-info-container">
                         <svg class="contacts-icon">
-                          <use href="/images/icon.svg#icon-facebook"></use>
+                          <use href="/images/icons.svg#icon-facebook"></use>
                         </svg></div
                     ></a>
                   </li>
@@ -260,7 +260,7 @@
                     <a href="" class="contacts-info-link"
                       ><div class="contacts-info-container">
                         <svg class="contacts-icon">
-                          <use href="/images/icon.svg#icon-linkedin"></use>
+                          <use href="/images/icons.svg#icon-linkedin"></use>
                         </svg></div
                     ></a>
                   </li>
@@ -281,7 +281,7 @@
                     <a href="" class="contacts-info-link"
                       ><div class="contacts-info-container">
                         <svg class="contacts-icon">
-                          <use href="/images/icon.svg#icon-instagram"></use>
+                          <use href="/images/icons.svg#icon-instagram"></use>
                         </svg></div
                     ></a>
                   </li>
@@ -290,7 +290,7 @@
                     <a href="" class="contacts-info-link"
                       ><div class="contacts-info-container">
                         <svg class="contacts-icon">
-                          <use href="/images/icon.svg#icon-twitter"></use>
+                          <use href="/images/icons.svg#icon-twitter"></use>
                         </svg></div
                     ></a>
                   </li>
@@ -299,7 +299,7 @@
                     <a href="" class="contacts-info-link"
                       ><div class="contacts-info-container">
                         <svg class="contacts-icon">
-                          <use href="/images/icon.svg#icon-facebook"></use>
+                          <use href="/images/icons.svg#icon-facebook"></use>
                         </svg></div
                     ></a>
                   </li>
@@ -308,7 +308,7 @@
                     <a href="" class="contacts-info-link"
                       ><div class="contacts-info-container">
                         <svg class="contacts-icon">
-                          <use href="/images/icon.svg#icon-linkedin"></use>
+                          <use href="/images/icons.svg#icon-linkedin"></use>
                         </svg></div
                     ></a>
                   </li>
@@ -428,7 +428,7 @@
               <a href="#" class="contacts-info-link">
                 <div class="contacts-info-container">
                   <svg class="contacts-icon">
-                    <use href="/images/icon.svg#icon-instagram"></use>
+                    <use href="/images/icons.svg#icon-instagram"></use>
                   </svg>
                 </div>
               </a>
@@ -438,7 +438,7 @@
               <a href="#" class="contacts-info-link">
                 <div class="contacts-info-container">
                   <svg class="contacts-icon">
-                    <use href="/images/icon.svg#icon-twitter"></use>
+                    <use href="/images/icons.svg#icon-twitter"></use>
                   </svg>
                 </div>
               </a>
@@ -448,7 +448,7 @@
               <a href="#" class="contacts-info-link">
                 <div class="contacts-info-container">
                   <svg class="contacts-icon">
-                    <use href="/images/icon.svg#icon-facebook"></use>
+                    <use href="/images/icons.svg#icon-facebook"></use>
                   </svg>
                 </div>
               </a>
@@ -458,7 +458,7 @@
               <a href="#" class="contacts-info-link">
                 <div class="contacts-info-container">
                   <svg class="contacts-icon">
-                    <use href="/images/icon.svg#icon-linkedin"></use>
+                    <use href="/images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </div>
               </a>
