--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
           <ul class="portfolio-list">
             <li class="portfolio-item">
               <div class="portfolio-icon-section">
-                <svg class="portfolio-icon">
-                  <use href="/images/icons.svg#icon-antenna"></use>
+                <svg class="portfolio-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="portfolio-h-three">Strategy</h3>
@@ -83,8 +83,8 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-icon-section">
-                <svg class="portfolio-icon">
-                  <use href="/images/icons.svg#icon-clock"></use>
+                <svg class="portfolio-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="portfolio-h-three">Punctuality</h3>
@@ -95,8 +95,8 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-icon-section">
-                <svg class="portfolio-icon">
-                  <use href="/images/icons.svg#icon-diagram"></use>
+                <svg class="portfolio-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="portfolio-h-three">Diligence</h3>
@@ -107,8 +107,8 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-icon-section">
-                <svg class="portfolio-icon">
-                  <use href="/images/icons.svg#icon-astronaut"></use>
+                <svg class="portfolio-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="portfolio-h-three">Technologies</h3>
@@ -139,8 +139,8 @@
                   <li class="contacts-info-item">
                     <a href="" class="contacts-info-link"
                       ><div class="contacts-info-container">
-                        <svg class="contacts-icon">
-                          <use href="/images/icons.svg#icon-instagram"></use>
+                        <svg class="contacts-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use>
                         </svg></div
                     ></a>
                   </li>
@@ -148,8 +148,8 @@
                   <li class="contacts-info-item">
                     <a href="" class="contacts-info-link"
                       ><div class="contacts-info-container">
-                        <svg class="contacts-icon">
-                          <use href="/images/icons.svg#icon-twitter"></use>
+                        <svg class="contacts-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </div>
                     </a>
@@ -158,8 +158,8 @@
                   <li class="contacts-info-item">
                     <a href="" class="contacts-info-link"
                       ><div class="contacts-info-container">
-                        <svg class="contacts-icon">
-                          <use href="/images/icons.svg#icon-facebook"></use>
+                        <svg class="contacts-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
                         </svg></div
                     ></a>
                   </li>
@@ -167,8 +167,8 @@
                   <li class="contacts-info-item">
                     <a href="" class="contacts-info-link"
                       ><div class="contacts-info-container">
-                        <svg class="contacts-icon">
-                          <use href="/images/icons.svg#icon-linkedin"></use>
+                        <svg class="contacts-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg></div
                     ></a>
                   </li>
@@ -184,8 +184,8 @@
                   <li class="contacts-info-item">
                     <a href="" class="contacts-info-link"
                       ><div class="contacts-info-container">
-                        <svg class="contacts-icon">
-                          <use href="/images/icons.svg#icon-instagram"></use>
+                        <svg class="contacts-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use>
                         </svg></div
                     ></a>
                   </li>
@@ -193,8 +193,8 @@
                   <li class="contacts-info-item">
                     <a href="" class="contacts-info-link"
                       ><div class="contacts-info-container">
-                        <svg class="contacts-icon">
-                          <use href="/images/icons.svg#icon-twitter"></use>
+                        <svg class="contacts-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter"></use>
                         </svg></div
                     ></a>
                   </li>
@@ -202,8 +202,8 @@
                   <li class="contacts-info-item">
                     <a href="" class="contacts-info-link"
                       ><div class="contacts-info-container">
-                        <svg class="contacts-icon">
-                          <use href="/images/icons.svg#icon-facebook"></use>
+                        <svg class="contacts-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
                         </svg></div
                     ></a>
                   </li>
@@ -211,8 +211,8 @@
                   <li class="contacts-info-item">
                     <a href="" class="contacts-info-link"
                       ><div class="contacts-info-container">
-                        <svg class="contacts-icon">
-                          <use href="/images/icons.svg#icon-linkedin"></use>
+                        <svg class="contacts-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg></div
                     ></a>
                   </li>
@@ -232,8 +232,8 @@
                   <li class="contacts-info-item">
                     <a href="" class="contacts-info-link"
                       ><div class="contacts-info-container">
-                        <svg class="contacts-icon">
-                          <use href="/images/icons.svg#icon-instagram"></use>
+                        <svg class="contacts-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use>
                         </svg></div
                     ></a>
                   </li>
@@ -241,8 +241,8 @@
                   <li class="contacts-info-item">
                     <a href="" class="contacts-info-link">
                       <div class="contacts-info-container">
-                        <svg class="contacts-icon">
-                          <use href="/images/icons.svg#icon-twitter"></use>
+                        <svg class="contacts-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter"></use>
                         </svg></div
                     ></a>
                   </li>
@@ -250,8 +250,8 @@
                   <li class="contacts-info-item">
                     <a href="" class="contacts-info-link"
                       ><div class="contacts-info-container">
-                        <svg class="contacts-icon">
-                          <use href="/images/icons.svg#icon-facebook"></use>
+                        <svg class="contacts-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
                         </svg></div
                     ></a>
                   </li>
@@ -259,8 +259,8 @@
                   <li class="contacts-info-item">
                     <a href="" class="contacts-info-link"
                       ><div class="contacts-info-container">
-                        <svg class="contacts-icon">
-                          <use href="/images/icons.svg#icon-linkedin"></use>
+                        <svg class="contacts-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg></div
                     ></a>
                   </li>
@@ -280,8 +280,8 @@
                   <li class="contacts-info-item">
                     <a href="" class="contacts-info-link"
                       ><div class="contacts-info-container">
-                        <svg class="contacts-icon">
-                          <use href="/images/icons.svg#icon-instagram"></use>
+                        <svg class="contacts-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use>
                         </svg></div
                     ></a>
                   </li>
@@ -289,8 +289,8 @@
                   <li class="contacts-info-item">
                     <a href="" class="contacts-info-link"
                       ><div class="contacts-info-container">
-                        <svg class="contacts-icon">
-                          <use href="/images/icons.svg#icon-twitter"></use>
+                        <svg class="contacts-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter"></use>
                         </svg></div
                     ></a>
                   </li>
@@ -298,8 +298,8 @@
                   <li class="contacts-info-item">
                     <a href="" class="contacts-info-link"
                       ><div class="contacts-info-container">
-                        <svg class="contacts-icon">
-                          <use href="/images/icons.svg#icon-facebook"></use>
+                        <svg class="contacts-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
                         </svg></div
                     ></a>
                   </li>
@@ -307,8 +307,8 @@
                   <li class="contacts-info-item">
                     <a href="" class="contacts-info-link"
                       ><div class="contacts-info-container">
-                        <svg class="contacts-icon">
-                          <use href="/images/icons.svg#icon-linkedin"></use>
+                        <svg class="contacts-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg></div
                     ></a>
                   </li>
@@ -427,8 +427,8 @@
             <li class="contacts-info-item">
               <a href="#" class="contacts-info-link">
                 <div class="contacts-info-container">
-                  <svg class="contacts-icon">
-                    <use href="/images/icons.svg#icon-instagram"></use>
+                  <svg class="contacts-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </div>
               </a>
@@ -437,8 +437,8 @@
             <li class="contacts-info-item">
               <a href="#" class="contacts-info-link">
                 <div class="contacts-info-container">
-                  <svg class="contacts-icon">
-                    <use href="/images/icons.svg#icon-twitter"></use>
+                  <svg class="contacts-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </div>
               </a>
@@ -447,8 +447,8 @@
             <li class="contacts-info-item">
               <a href="#" class="contacts-info-link">
                 <div class="contacts-info-container">
-                  <svg class="contacts-icon">
-                    <use href="/images/icons.svg#icon-facebook"></use>
+                  <svg class="contacts-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </div>
               </a>
@@ -457,8 +457,8 @@
             <li class="contacts-info-item">
               <a href="#" class="contacts-info-link">
                 <div class="contacts-info-container">
-                  <svg class="contacts-icon">
-                    <use href="/images/icons.svg#icon-linkedin"></use>
+                  <svg class="contacts-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </div>
               </a>
