--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <p class="contacts-info">Product Designer</p>
                 <ul class="contacts-info-list">
                   <li class="contacts-info-item">
-                    <a href="" class="contacts-info-link"
+                    <a href="#" class="contacts-info-link"
                       ><div class="contacts-info-container">
                         <svg class="contacts-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-instagram"></use>
@@ -146,7 +146,7 @@
                   </li>
 
                   <li class="contacts-info-item">
-                    <a href="" class="contacts-info-link"
+                    <a href="#" class="contacts-info-link"
                       ><div class="contacts-info-container">
                         <svg class="contacts-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-twitter"></use>
@@ -156,7 +156,7 @@
                   </li>
 
                   <li class="contacts-info-item">
-                    <a href="" class="contacts-info-link"
+                    <a href="#" class="contacts-info-link"
                       ><div class="contacts-info-container">
                         <svg class="contacts-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-facebook"></use>
@@ -165,7 +165,7 @@
                   </li>
 
                   <li class="contacts-info-item">
-                    <a href="" class="contacts-info-link"
+                    <a href="#" class="contacts-info-link"
                       ><div class="contacts-info-container">
                         <svg class="contacts-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-linkedin"></use>
@@ -182,7 +182,7 @@
                 <p class="contacts-info">Frontend Developer</p>
                 <ul class="contacts-info-list">
                   <li class="contacts-info-item">
-                    <a href="" class="contacts-info-link"
+                    <a href="#" class="contacts-info-link"
                       ><div class="contacts-info-container">
                         <svg class="contacts-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-instagram"></use>
@@ -191,7 +191,7 @@
                   </li>
 
                   <li class="contacts-info-item">
-                    <a href="" class="contacts-info-link"
+                    <a href="#" class="contacts-info-link"
                       ><div class="contacts-info-container">
                         <svg class="contacts-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-twitter"></use>
@@ -200,7 +200,7 @@
                   </li>
 
                   <li class="contacts-info-item">
-                    <a href="" class="contacts-info-link"
+                    <a href="#" class="contacts-info-link"
                       ><div class="contacts-info-container">
                         <svg class="contacts-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-facebook"></use>
@@ -209,7 +209,7 @@
                   </li>
 
                   <li class="contacts-info-item">
-                    <a href="" class="contacts-info-link"
+                    <a href="#" class="contacts-info-link"
                       ><div class="contacts-info-container">
                         <svg class="contacts-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-linkedin"></use>
@@ -230,7 +230,7 @@
                 <p class="contacts-info">Marketing</p>
                 <ul class="contacts-info-list">
                   <li class="contacts-info-item">
-                    <a href="" class="contacts-info-link"
+                    <a href="#" class="contacts-info-link"
                       ><div class="contacts-info-container">
                         <svg class="contacts-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-instagram"></use>
@@ -239,7 +239,7 @@
                   </li>
 
                   <li class="contacts-info-item">
-                    <a href="" class="contacts-info-link">
+                    <a href="#" class="contacts-info-link">
                       <div class="contacts-info-container">
                         <svg class="contacts-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-twitter"></use>
@@ -248,7 +248,7 @@
                   </li>
 
                   <li class="contacts-info-item">
-                    <a href="" class="contacts-info-link"
+                    <a href="#" class="contacts-info-link"
                       ><div class="contacts-info-container">
                         <svg class="contacts-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-facebook"></use>
@@ -257,7 +257,7 @@
                   </li>
 
                   <li class="contacts-info-item">
-                    <a href="" class="contacts-info-link"
+                    <a href="#" class="contacts-info-link"
                       ><div class="contacts-info-container">
                         <svg class="contacts-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-linkedin"></use>
@@ -278,7 +278,7 @@
                 <p class="contacts-info">UI Designer</p>
                 <ul class="contacts-info-list">
                   <li class="contacts-info-item">
-                    <a href="" class="contacts-info-link"
+                    <a href="#" class="contacts-info-link"
                       ><div class="contacts-info-container">
                         <svg class="contacts-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-instagram"></use>
@@ -287,7 +287,7 @@
                   </li>
 
                   <li class="contacts-info-item">
-                    <a href="" class="contacts-info-link"
+                    <a href="#" class="contacts-info-link"
                       ><div class="contacts-info-container">
                         <svg class="contacts-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-twitter"></use>
@@ -296,7 +296,7 @@
                   </li>
 
                   <li class="contacts-info-item">
-                    <a href="" class="contacts-info-link"
+                    <a href="#" class="contacts-info-link"
                       ><div class="contacts-info-container">
                         <svg class="contacts-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-facebook"></use>
@@ -305,7 +305,7 @@
                   </li>
 
                   <li class="contacts-info-item">
-                    <a href="" class="contacts-info-link"
+                    <a href="#" class="contacts-info-link"
                       ><div class="contacts-info-container">
                         <svg class="contacts-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-linkedin"></use>
