reload all file

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
     </main>
     <footer class="box-footer">
       <div class="container container-footer">
-        <div>
+        <div class="container-footer-logo">
           <a href="./index.html" class="logo-link"
             >Web<span class="logo-footer">Studio</span></a
           >
@@ -422,7 +422,7 @@
           </p>
         </div>
         <div class="container-footer-social">
-          <h4 class="footer-title-social">Social media</h4>
+          <p class="footer-title-social">Social media</p>
           <ul class="contacts-info-list">
             <li class="contacts-info-item">
               <a href="#" class="contacts-info-link">
