--- a/index.html
+++ b/index.html
@@ -137,12 +137,11 @@
                 <p class="contacts-info">Product Designer</p>
                 <ul class="contacts-info-list">
                   <li class="contacts-info-item">
-                    <a href="#" class="contacts-info-link"
-                      ><div class="contacts-info-container">
-                        <svg class="contacts-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-instagram"></use>
-                        </svg></div
-                    ></a>
+                    <a href="#" class="contacts-info-link">
+                      <svg class="contacts-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
 
                   <li class="contacts-info-item">
