--- a/index.html
+++ b/index.html
@@ -406,44 +406,36 @@
         </div>
         <div class="container-footer-social">
           <p class="footer-title-social">Social media</p>
-          <ul class="contacts-info-list">
-            <li class="contacts-info-item">
+          <ul class="footer-contacts-info-list">
+            <li class="footer-contacts-info-item">
               <a href="#" class="contacts-info-link">
-                <div class="contacts-info-container">
-                  <svg class="contacts-icon" width="24" height="24">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </div>
+                <svg class="contacts-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
               </a>
             </li>
 
-            <li class="contacts-info-item">
+            <li class="footer-contacts-info-item">
               <a href="#" class="contacts-info-link">
-                <div class="contacts-info-container">
-                  <svg class="contacts-icon" width="24" height="24">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </div>
+                <svg class="contacts-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
               </a>
             </li>
 
-            <li class="contacts-info-item">
+            <li class="footer-contacts-info-item">
               <a href="#" class="contacts-info-link">
-                <div class="contacts-info-container">
-                  <svg class="contacts-icon" width="24" height="24">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </div>
+                <svg class="contacts-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
               </a>
             </li>
 
-            <li class="contacts-info-item">
+            <li class="footer-contacts-info-item">
               <a href="#" class="contacts-info-link">
-                <div class="contacts-info-container">
-                  <svg class="contacts-icon" width="24" height="24">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </div>
+                <svg class="contacts-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
               </a>
             </li>
           </ul>
