--- a/index.html
+++ b/index.html
@@ -319,14 +319,20 @@
                 <h3 class="h-three-port">Banking App</h3>
                 <p class="port-info">App</p>
               </div>
+              <div class="port-info-container-hover">
+                <p class="port-hover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
             </li>
-            <li class="port-item-hover">
+            <li class="port-item">
               <img
                 src="./images/cashlesspayment.jpg"
                 alt="Cashless Payment"
                 width="360"
                 height="300"
-                loading="lazy"
               />
               <div class="port-info-container-hover">
                 <p class="port-hover-text">
@@ -347,6 +353,13 @@
                 width="360"
                 height="300"
               />
+              <div class="port-info-container-hover">
+                <p class="port-hover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="port-info-container">
                 <h3 class="h-three-port">Meditation App</h3>
                 <p class="port-info">App</p>
@@ -359,6 +372,13 @@
                 width="360"
                 height="300"
               />
+              <div class="port-info-container-hover">
+                <p class="port-hover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="port-info-container">
                 <h3 class="h-three-port">Taxi Service</h3>
                 <p class="port-info">Marketing</p>
@@ -371,6 +391,13 @@
                 width="360"
                 height="300"
               />
+              <div class="port-info-container-hover">
+                <p class="port-hover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="port-info-container">
                 <h3 class="h-three-port">Screen Illustrations</h3>
                 <p class="port-info">Design</p>
@@ -383,6 +410,13 @@
                 width="360"
                 height="300"
               />
+              <div class="port-info-container-hover">
+                <p class="port-hover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="port-info-container">
                 <h3 class="h-three-port">Online Courses</h3>
                 <p class="port-info">Marketing</p>
