--- a/index.html
+++ b/index.html
@@ -309,118 +309,129 @@
           <h2 class="h-two-port">Our Portfolio</h2>
           <ul class="port-list">
             <li class="port-item">
-              <img
-                src="./images/bankingapp.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+              <div class="port-item-img-container">
+                <img
+                  src="./images/bankingapp.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <div class="port-info-container-hover">
+                  <p class="port-hover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="port-info-container">
                 <h3 class="h-three-port">Banking App</h3>
                 <p class="port-info">App</p>
               </div>
-              <div class="port-info-container-hover">
-                <p class="port-hover-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
             </li>
             <li class="port-item">
-              <img
-                src="./images/cashlesspayment.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="port-item-img-container">
+                <img
+                  src="./images/cashlesspayment.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <div class="port-info-container-hover">
+                  <p class="port-hover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="port-info-container">
                 <h3 class="h-three-port">Cashless Payment</h3>
                 <p class="port-info">Marketing</p>
               </div>
-              <div class="port-info-container-hover">
-                <p class="port-hover-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
             </li>
-
             <li class="port-item">
-              <img
-                src="./images/meditationapp.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
+              <div class="port-item-img-container">
+                <img
+                  src="./images/meditationapp.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <div class="port-info-container-hover">
+                  <p class="port-hover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="port-info-container">
                 <h3 class="h-three-port">Meditation App</h3>
                 <p class="port-info">App</p>
               </div>
-              <div class="port-info-container-hover">
-                <p class="port-hover-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
             </li>
             <li class="port-item">
-              <img
-                src="./images/taxiservice.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+              <div class="port-item-img-container">
+                <img
+                  src="./images/taxiservice.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <div class="port-info-container-hover">
+                  <p class="port-hover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="port-info-container">
                 <h3 class="h-three-port">Taxi Service</h3>
                 <p class="port-info">Marketing</p>
               </div>
-              <div class="port-info-container-hover">
-                <p class="port-hover-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
             </li>
             <li class="port-item">
-              <img
-                src="./images/screenillustrations.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="port-item-img-container">
+                <img
+                  src="./images/screenillustrations.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <div class="port-info-container-hover">
+                  <p class="port-hover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="port-info-container">
                 <h3 class="h-three-port">Screen Illustrations</h3>
                 <p class="port-info">Design</p>
               </div>
-              <div class="port-info-container-hover">
-                <p class="port-hover-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
             </li>
             <li class="port-item">
-              <img
-                src="./images/onlinecourses.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
+              <div class="port-item-img-container">
+                <img
+                  src="./images/onlinecourses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <div class="port-info-container-hover">
+                  <p class="port-hover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="port-info-container">
                 <h3 class="h-three-port">Online Courses</h3>
                 <p class="port-info">Marketing</p>
-              </div>
-              <div class="port-info-container-hover">
-                <p class="port-hover-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
               </div>
             </li>
           </ul>
