--- a/index.html
+++ b/index.html
@@ -316,13 +316,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="port-info-container-hover">
-                  <p class="port-hover-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="port-hover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="port-info-container">
                 <h3 class="h-three-port">Banking App</h3>
@@ -337,13 +335,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="port-info-container-hover">
-                  <p class="port-hover-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="port-hover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="port-info-container">
                 <h3 class="h-three-port">Cashless Payment</h3>
@@ -358,13 +354,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="port-info-container-hover">
-                  <p class="port-hover-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="port-hover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="port-info-container">
                 <h3 class="h-three-port">Meditation App</h3>
@@ -379,13 +373,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="port-info-container-hover">
-                  <p class="port-hover-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="port-hover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="port-info-container">
                 <h3 class="h-three-port">Taxi Service</h3>
@@ -400,13 +392,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="port-info-container-hover">
-                  <p class="port-hover-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="port-hover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="port-info-container">
                 <h3 class="h-three-port">Screen Illustrations</h3>
@@ -421,13 +411,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="port-info-container-hover">
-                  <p class="port-hover-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="port-hover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="port-info-container">
                 <h3 class="h-three-port">Online Courses</h3>
